# marble_scripts

./: README  anchor-4.rviz  anchor.rviz  b11.rviz  beacon.launch  box_filter.launch  box_filter_air.launch  exploration.launch  exploration_air.launch  exploration_ground.launch  exploration_test_air_ground.launch  exploration_test_ground_air.launch  filter.launch  filter_test.launch  husky_bag.rviz  ma_test_A01.rviz  ma_test_X1.rviz  ma_test_X2.rviz  mapping.launch  marble  marble-4.rviz  marble-air.rviz  marble-virtual.rviz  marble.rviz  marble4  multi_agent.rviz  octomap.launch  octomap_merged.launch  octomap_server.launch  parse_rosout.sh  process_darpa_logs.sh  record_base.rviz  record_x1.rviz  record_x2.rviz  robot_view.py  robots.launch  robots_ign.launch  robots_tunnel_practice_2-4.launch  robots_tunnel_practice_2.launch  robots_urban_underground-4.launch  (+21 more)
bag_utils/: bag_convert_ma_msgs.py  bag_convert_old_stairs.py  bag_graph_z.py  bag_replace_topics.py  bag_throttle_topics.py  bag_trim.py  bagmerge.py  bagsize.py  find_behaviors.py  map_to_neighbor.py  parse_bobcat.py  parse_rosout.py  parse_virtual_bobcat.sh
base_station/: 1  2  3  4  a01.rviz  base_config  base_mapping.launch  base_setup.sh  bviz.sh  d01.rviz  d02.rviz  darpa_comms_test.launch  darpa_comms_test.sh  fix_multicast.sh  fpv_saver.launch  h01.rviz  h02.rviz  h03.rviz  l01.rviz  launch_multimaster.launch  (+17 more)
marble_beacon/: CMakeLists.txt  model.config  model.sdf  package.xml
marble_beacon/launch/: description.launch  spawner.rb  vehicle_topics.launch
marble_beacon/urdf/: robot_from_sdf.xacro
