<?xml version="1.0"?>
<package format="2">
  <name>marble_beacon</name>
  <version>0.1.0</version>
  <description>The marble_beacon package</description>

  <maintainer email="addisu@openrobotics.org">Addisu Z. Taddese</maintainer>
  <author email="leon.m.kim@jpl.nasa.gov">Leon Kim</author>
  <author email="edward.terry@jpl.nasa.gov">Ed Terry</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
